Add tree-sitter integration for document symbols and folding
Integrates tree-sitter-compact parser to provide AST-aware features:
- Document symbols: outline view of circuits, structs, enums, modules
- Folding ranges: code folding for blocks and control flow statements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,3 +57,7 @@ regex = "1"
 
 # Temp files for compiler invocation
 tempfile = "3"
+
+# Tree-sitter for parsing
+tree-sitter = "0.25"
+tree-sitter-compact = { path = "../compact-tree-sitter" }
