--- a/crates/compact-lsp/Cargo.toml
+++ b/crates/compact-lsp/Cargo.toml
@@ -34,5 +34,8 @@ tracing-subscriber.workspace = true
 # Error handling
 anyhow.workspace = true
 
+# Temp files for live diagnostics
+tempfile.workspace = true
+
 # Our diagnostic engine crate
 compact-analyzer = { path = "../compact-analyzer" }
